# PI-Pico-VGA-Card

./: README.md  instructions.txt  todo.txt
firmware-pico/: CMakeLists.txt  font8x8.h  picofw.c  vga_rgb.pio
hardware-info/: specs.txt
software-6502/: 6502-software-example.s
software-uno/: uno-software-example.ino
